Implementar registros de viajes. Fix https://github.com/juanro49/autu-mandu/issues/6
AP-author: https://masto.nobigtech.es/@juanro49